--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@babel/plugin-syntax-decorators": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-syntax-typescript": "^7.3.3",
-    "@storybook/addon-actions": "^4.1.13",
-    "@storybook/react": "^4.1.13",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
+    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/react": "^5.0.1",
     "@types/classnames": "^2.2.7",
     "@types/component-emitter": "^1.2.8",
     "@types/compression": "0.0.36",
@@ -62,6 +64,7 @@
     "@types/react-color": "^2.14.1",
     "@types/react-dom": "^16.8.2",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/seedrandom": "^2.4.27",
@@ -115,7 +118,6 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@types/react-outside-click-handler": "^1.2.0",
     "binary": "^0.3.0",
     "binary-search-bounds": "^2.0.4",
     "bindings": "^1.3.1",
