--- a/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
+++ b/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
@@ -1,3 +1,4 @@
+use_com: True
 stance:
   # The body height of the robot, in meters; changing this will alter how high the robot's natural stance is.
   body_height: 0.265
@@ -36,9 +37,11 @@ stance:
 
 walk_cycle:
   # Defines how long it will take for the robot to take its next step, in seconds.
-  step_time: 0.30
-  # ???
-  zmp_time: 0.310
+  # f = sqrt(g / l) / (2 * pi) = sqrt(9.81 / 0.45) / (2 * pi) = 0.743101911 => T = 1 / f = 1.34571044
+  step_time: 1.34571044
+  # Modifies the ZMP CoM trajectory waveform. Smaller values cause the CoM to swing further, faster.
+  # t_zmp = sqrt(z_0 / g) = sqrt(0.45 / 9.81) = 0.214176468
+  zmp_time: 0.214176468
   hip_roll_compensation: 4 * pi / 180
   step:
     # The height to which the robot raises its foot at each step. This parameter is very sensitive in terms of balance.
@@ -162,5 +165,3 @@ STAND_SCRIPT_DURATION: 1
 # Use this to emit fake localisation Self objects based on the walk engine's blind belief
 # Note: This is really only useful as a debugging tool
 emit_localisation: true
-
-
