--- a/module/motion/ScriptEngine/data/scripts/igus/KickRight.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/KickRight.yaml
@@ -1,5 +1,87 @@
 - duration: 1000
   targets:
+    - id: HEAD_YAW
+      position: -0.001534355
+      gain: 30
+      torque: 100
+    - id: HEAD_PITCH
+      position: 0.5308869
+      gain: 30
+      torque: 100
+    - id: R_HIP_YAW
+      position: -0.02915275
+      gain: 30
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0.01994662
+      gain: 30
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.1503668
+      gain: 30
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.09819874
+      gain: 30
+      torque: 100
+    - id: R_HIP_PITCH
+      position: -0.4802532
+      gain: 30
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -0.4909937
+      gain: 30
+      torque: 100
+    - id: R_KNEE
+      position: 0.7854941
+      gain: 30
+      torque: 100
+    - id: L_KNEE
+      position: 0.8269216
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.5324213
+      gain: 30
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.556971
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0.1549699
+      gain: 30
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: -0.09513003
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.98373
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.1762591
+      gain: 30
+      torque: 100
+    - id: R_ELBOW
+      position: -1.574249
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 2.068119
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.1348315
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: -1.565042
+      gain: 30
+      torque: 100
+- duration: 1000
+  targets:
     - id: R_HIP_YAW
       position: -0.02923973
       gain: 20
@@ -156,20 +238,12 @@
       position: 0.2561415
       gain: 20
       torque: 100
-    - id: L_HIP_PITCH
-      position: -0.2040693
-      gain: 20
-      torque: 100
     - id: R_ANKLE_ROLL
       position: 0.3789858
       gain: 20
       torque: 100
     - id: R_HIP_ROLL
       position: -0.5109404
-      gain: 20
-      torque: 100
-    - id: R_KNEE
-      position: 0.7578757
       gain: 20
       torque: 100
     - id: R_HIP_PITCH
@@ -220,6 +294,14 @@
       position: 0.242
       gain: 30
       torque: 100
+    - id: R_KNEE
+      position: 1.093899
+      gain: 30
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -0.1411607
+      gain: 30
+      torque: 100
 - duration: 300
   targets:
     - id: R_HIP_YAW
@@ -258,16 +340,8 @@
       position: 0.2777183
       gain: 20
       torque: 100
-    - id: R_KNEE
-      position: 0.3635463
-      gain: 30
-      torque: 100
     - id: R_HIP_PITCH
       position: -0.9420942
-      gain: 30
-      torque: 100
-    - id: R_ANKLE_PITCH
-      position: 0.3160772
       gain: 30
       torque: 100
     - id: R_SHOULDER_ROLL
@@ -276,10 +350,6 @@
       torque: 100
     - id: R_SHOULDER_PITCH
       position: 2.204677
-      gain: 30
-      torque: 100
-    - id: L_HIP_ROLL
-      position: -0.2961306
       gain: 30
       torque: 100
     - id: L_HIP_PITCH
@@ -292,6 +362,18 @@
       torque: 100
     - id: L_ANKLE_ROLL
       position: 0.2424282
+      gain: 30
+      torque: 100
+    - id: R_KNEE
+      position: 0.780891
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.185657
+      gain: 30
+      torque: 100
+    - id: L_HIP_ROLL
+      position: -0.1718478
       gain: 30
       torque: 100
 - duration: 500
@@ -326,10 +408,6 @@
       torque: 100
     - id: L_HIP_PITCH
       position: -0.2040693
-      gain: 20
-      torque: 100
-    - id: L_HIP_ROLL
-      position: -0.2255502
       gain: 20
       torque: 100
     - id: R_HIP_ROLL
@@ -367,6 +445,10 @@
     - id: L_SHOULDER_ROLL
       position: 0.3695879
       gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: -0.03989324
+      gain: 30
       torque: 100
 - duration: 500
   targets:
@@ -434,14 +516,14 @@
       position: 0.244
       gain: 20
       torque: 100
-    - id: R_ANKLE_PITCH
-      position: -0.3667109
-      gain: 20
-      torque: 100
     - id: R_ANKLE_ROLL
-      position: 0.5048029
-      gain: 20
+      position: 0.3820545
+      gain: 30
       torque: 100
+    - id: R_ANKLE_PITCH
+      position: 0
+      gain: 10
+      torque: 0
 - duration: 1000
   targets:
     - id: R_HIP_YAW
@@ -514,5 +596,87 @@
       torque: 100
     - id: R_ANKLE_ROLL
       position: 0.06137422
+      gain: 30
+      torque: 100
+- duration: 1000
+  targets:
+    - id: HEAD_YAW
+      position: -0.001534355
+      gain: 30
+      torque: 100
+    - id: HEAD_PITCH
+      position: 0.5308869
+      gain: 30
+      torque: 100
+    - id: R_HIP_YAW
+      position: -0.02915275
+      gain: 30
+      torque: 100
+    - id: L_HIP_YAW
+      position: 0.01994662
+      gain: 30
+      torque: 100
+    - id: R_HIP_ROLL
+      position: -0.1503668
+      gain: 30
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.09819874
+      gain: 30
+      torque: 100
+    - id: R_HIP_PITCH
+      position: -0.4802532
+      gain: 30
+      torque: 100
+    - id: L_HIP_PITCH
+      position: -0.4909937
+      gain: 30
+      torque: 100
+    - id: R_KNEE
+      position: 0.7854941
+      gain: 30
+      torque: 100
+    - id: L_KNEE
+      position: 0.8269216
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.5324213
+      gain: 30
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.556971
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: 0.1549699
+      gain: 30
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: -0.09513003
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.98373
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.1762591
+      gain: 30
+      torque: 100
+    - id: R_ELBOW
+      position: -1.574249
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 2.068119
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.1348315
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: -1.565042
       gain: 30
       torque: 100
