--- a/module/input/Camera/data/config/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/Cameras/Right.yaml
@@ -1,1 +1,29 @@
+driver: Aravis
+
+buffer_count: 4             # The number of software buffers to use.
+
 is_left: false
+
+format:
+  width: 1280
+  height: 1024
+  pixel: BayerRG8
+
+lens:
+  focal_length: 412.507218876330336              # 1/focal_length_in_pixels = camera_pixel_size / camera_focal_length = 4.8um / 1.98mm
+  centre_offset: [0, 0]
+  fov: 3.14
+
+settings:
+  exposure: 33333             # The shutter time in microseconds (1/fps).
+  gain: 10                  # The gain of the camera in dB.
+  gamma: 1.25                 # For 8-bit gamma is applied as OUT = 255 * (IN/255)^1/gamma. If 0, gamma will be disabled to create a linear response.
+  black_level: 0           # Analog black level (brightness) in percent. 0 = off.
+  sharpness: 1024             # For sharpness values greater than 1024, the pixel is sharpened; for values less than 1024 it is blurred. Averaged across a 3x3 block.
+  hue: 100                   # Hue of the image in degrees.
+  saturation: 100            # Saturation of the image in percent.
+  white_balance: [   1023,    1023] # Adjust the relative gain of R/V w.r.t G/Y and B/U w.r.t G/Y. End goal is to achieve a 1:1:1 ratio for the RGB channels.
+                              # [R_Value/V_value, B_Value/U_Value] .... A 0 in either position will turn on automatic control.
+                              # For example, if the average pixel on the target was 222 (R), 232 (G), 236 (B)
+                              # then all the reds should be scaled up by 232/222 and the blues down by 232/236.
+                              # According to technical reference, defaults are 1023 for both R and B. (These are 12 bit values).
