--- a/module/motion/ScriptEngine/data/scripts/igus/Stand.yaml
+++ b/module/motion/ScriptEngine/data/scripts/igus/Stand.yaml
@@ -1,74 +1,82 @@
 - duration: 1000
   targets:
-    - id: R_SHOULDER_PITCH
-      position: 2.091135
-      gain: 15
+    - id: HEAD_YAW
+      position: -0.001534355
+      gain: 30
       torque: 100
-    - id: L_SHOULDER_PITCH
-      position: 2.088066
-      gain: 15
-      torque: 100
-    - id: R_SHOULDER_ROLL
-      position: -0.4217559
-      gain: 15
-      torque: 100
-    - id: L_SHOULDER_ROLL
-      position: 0.4232903
-      gain: 15
-      torque: 100
-    - id: R_ELBOW
-      position: -0.8684452
-      gain: 15
-      torque: 100
-    - id: L_ELBOW
-      position: -0.8715138
-      gain: 15
+    - id: HEAD_PITCH
+      position: 0.5308869
+      gain: 30
       torque: 100
     - id: R_HIP_YAW
-      position: -0.0276184
-      gain: 15
+      position: -0.02915275
+      gain: 30
       torque: 100
     - id: L_HIP_YAW
-      position: 0.0276184
-      gain: 15
+      position: 0.01994662
+      gain: 30
       torque: 100
     - id: R_HIP_ROLL
-      position: -0.1396263
-      gain: 15
+      position: -0.1503668
+      gain: 30
       torque: 100
     - id: L_HIP_ROLL
-      position: 0.1196797
-      gain: 15
+      position: 0.09819874
+      gain: 30
       torque: 100
     - id: R_HIP_PITCH
-      position: -0.4756502
-      gain: 15
+      position: -0.4802532
+      gain: 30
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.4771845
-      gain: 15
+      position: -0.4909937
+      gain: 30
       torque: 100
     - id: R_KNEE
-      position: 0.7870284
-      gain: 15
+      position: 0.7854941
+      gain: 30
       torque: 100
     - id: L_KNEE
-      position: 0.8100438
-      gain: 15
+      position: 0.8269216
+      gain: 30
       torque: 100
     - id: R_ANKLE_PITCH
-      position: -0.5278183
-      gain: 15
+      position: -0.5324213
+      gain: 30
       torque: 100
     - id: L_ANKLE_PITCH
-      position: -0.5477649
-      gain: 15
+      position: -0.556971
+      gain: 30
       torque: 100
     - id: R_ANKLE_ROLL
-      position: 0.1319546
-      gain: 15
+      position: 0.1549699
+      gain: 30
       torque: 100
     - id: L_ANKLE_ROLL
-      position: -0.1058705
-      gain: 15
+      position: -0.09513003
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.98373
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.1762591
+      gain: 30
+      torque: 100
+    - id: R_ELBOW
+      position: -1.574249
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 2.068119
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.1348315
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: -1.565042
+      gain: 30
       torque: 100
