--- a/module/input/Camera/data/config/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/Cameras/Right.yaml
@@ -10,7 +10,8 @@ format:
   pixel: BayerRG8
 
 lens:
-  focal_length: 412.507218876330336              # 1/focal_length_in_pixels = camera_pixel_size / camera_focal_length = 4.8um / 1.98mm
+  # focal_length_in_pixels = camera_focal_length / camera_pixel_size = 1.98mm / 4.8um
+  focal_length: 412.507218876330336
   centre_offset: [0, 0]
   fov: 3.14
 
