--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": "github:NUbots/NUsight2",
   "engines": {
-    "node": ">=10.0.0",
+    "node": ">=14.0.0",
     "yarn": "1.x"
   },
   "scripts": {
@@ -40,14 +40,11 @@
     "heroku-postbuild": "yarn build && yarn storybook:build"
   },
   "devDependencies": {
-    "@babel/core": "7.14.8",
-    "@babel/plugin-syntax-decorators": "7.14.5",
-    "@babel/plugin-syntax-jsx": "7.14.5",
-    "@babel/plugin-syntax-typescript": "7.14.5",
-    "@storybook/addon-actions": "6.3.4",
+    "@storybook/addon-actions": "6.4.0-alpha.18",
     "@storybook/addon-knobs": "6.3.0",
-    "@storybook/react": "6.3.4",
-    "@types/classnames": "2.3.1",
+    "@storybook/builder-webpack5": "^6.4.0-alpha.18",
+    "@storybook/manager-webpack5": "^6.4.0-alpha.18",
+    "@storybook/react": "6.4.0-alpha.18",
     "@types/component-emitter": "1.2.10",
     "@types/compression": "1.7.1",
     "@types/connect-history-api-fallback": "1.3.5",
@@ -78,7 +75,6 @@
     "@types/xxhashjs": "0.2.2",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
-    "babel-loader": "8.2.2",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.2.0",
     "eslint": "7.31.0",
@@ -95,7 +91,6 @@
     "mini-css-extract-plugin": "2.1.0",
     "nodemon": "2.0.12",
     "postcss": "8.3.5",
-    "postcss-cssnext": "3.1.0",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.1.1",
     "postcss-reporter": "7.0.2",
