--- a/nusight2/tsconfig.json
+++ b/nusight2/tsconfig.json
@@ -3,7 +3,8 @@
     "allowJs": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "target": "ES2019",
+    "target": "ESNext",
+    "useDefineForClassFields": false,
     "jsx": "react",
     "skipLibCheck": true,
     "module": "commonjs",
@@ -14,11 +15,7 @@
     "strict": true,
     "outDir": "build",
     "lib": [
-      "ES2015",
-      "ES2016",
-      "ES2017",
-      "ES2018",
-      "ES2019",
+      "ESNext",
       "dom",
       "webworker"
     ],
