--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -52,21 +52,25 @@ steps:
 
   # Build generic target and test
   - label: "Build generic and Test"
-    # We have to configure twice. The first configuration generates the cache for `./b unused`, then the next one
-    # turns on the role which `./b unused -g` generates
-    command:
-      - sudo chmod 777 roles # Required to let `./b unused` write the role file
-      - ./b configure -- -DBUILD_TESTS=ON
-      - ./b unused -g
-      - ./b configure
-      - ./b build
-      - ./b tests run
+    command: "./b configure -- -DBUILD_TESTS=ON && ./b build && ./b tests run"
     plugins:
       - docker-compose#v3.0.3:
           config: .buildkite/NUbots/docker-compose.yml
           pull: generic_image
           run: generic
           workdir: /home/nubots/NUbots/
+
+  # Generate role with unused modules and build it
+  - label: "Build unused modules"
+    command:
+    # Enable writing in the roles directory for the generated role
+      - sudo chmod 777 roles
+    # We have to configure twice. The first configuration generates the cmake cache for `./b unused`, then the next one
+    # turns on the role which `./b unused -g` generates
+      - ./b configure -- -DBUILD_TESTS=ON
+      - ./b unused -g
+      - ./b configure
+      - ./b build
 
   # Build for both nuc targets
   - label: "Build nuc7i7bnh"
