--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -2,15 +2,15 @@
 file(GLOB_RECURSE test_src "*/**.cpp" "*/**.hpp")
 
 if(test_src)
-  add_executable(TestShared "${CMAKE_SOURCE_DIR}/${NUCLEAR_SHARED_DIR}/tests/test.cpp" ${test_src})
-  target_link_libraries(TestShared PRIVATE nuclear::message nuclear::utility)
+  add_executable(testshared "${CMAKE_SOURCE_DIR}/${NUCLEAR_SHARED_DIR}/tests/test.cpp" ${test_src})
+  target_link_libraries(testshared PRIVATE nuclear::message nuclear::utility)
 
-  set_target_properties(TestShared PROPERTIES FOLDER "shared/tests")
+  set_target_properties(testshared PROPERTIES FOLDER "shared/tests")
 
   # Add the test
   add_test(
-    NAME TestShared
+    NAME testshared
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/TestShared
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/testshared
   )
 endif()
